fixed EFF logo overflow

--- a/wp-content/themes/digitalcitizen/css/style.less
+++ b/wp-content/themes/digitalcitizen/css/style.less
@@ -744,7 +744,7 @@ body:not(.home).page {
     @media screen and (min-width:1000px) {
         .eff{
             background-position: 0 -1px ;
-            width: 100px;
+            width: 96px;
             height: 68px;
         }
         .gv{
